tests/functional/lang/eval-fail-listToAttrs-3.err.exp
error:
       … while calling the 'listToAttrs' builtin
         at /pwd/lang/eval-fail-listToAttrs-3.nix:1:1:
            1| builtins.listToAttrs [ { } ]
             | ^
            2|

       … in a {name=...; value=...;} pair

       error: attribute 'name' missing
